ConnexoProject/force-app/main/default/objects/Security__c/Security__c.object-meta.xml
<CustomObject>
    <description>System Security Requests Module for Trackwise , ValGenesis and Compliance Wire .</description>
    <label>Security</label>
    <nameField>
        <displayFormat>SEC-{000000}</displayFormat>
        <label>Security Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>