ConnexoProject/force-app/main/default/objects/Security__c/fields/Access_Group__c.field-meta.xml
<CustomField>
    <fullName>Access_Group__c</fullName>
    <label>Access Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CMF_ViCellBlu_Admins</fullName>
            </value>
            <value>
                <fullName>CMF_ViCellBlu_SuperUsers</fullName>
            </value>
            <value>
                <fullName>CMF_ViCellBlu_Users</fullName>
            </value>
            <value>
                <fullName>Locally Administrated</fullName>
            </value>
            <value>
                <fullName>PLA_Fermenters_Admin</fullName>
            </value>
            <value>
                <fullName>PLA_Fermenters_Supervisor</fullName>
            </value>
            <value>
                <fullName>PLA_Fermenters_Users</fullName>
            </value>
            <value>
                <fullName>PLA_NanoDrop_Admins</fullName>
            </value>
            <value>
                <fullName>PLA_NanoDrop_SuperUsers</fullName>
            </value>
            <value>
                <fullName>PLA_NanoDrop_Users</fullName>
            </value>
            <value>
                <fullName>QC_PlateReader_Admins</fullName>
            </value>
            <value>
                <fullName>QC_PlateReader_SuperUsers</fullName>
            </value>
            <value>
                <fullName>QC_PlateReader_Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>