ConnexoProject/force-app/main/default/objects/Security__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Deactivate</fullName>
                <isActive>false</isActive>
                <label>Deactivate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>