ConnexoProject/force-app/main/default/objects/Security__c/fields/Alarm_Alert_List__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Alert_List__c</fullName>
    <label>Alarm Alert List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>System__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Manufacturing Suites Equipment</fullName>
            </value>
            <value>
                <fullName>All Manufacturing Suites Room</fullName>
            </value>
            <value>
                <fullName>Autoclave Room</fullName>
            </value>
            <value>
                <fullName>Cold Room 1 &amp; 2 Room</fullName>
            </value>
            <value>
                <fullName>Corridors Equipment</fullName>
            </value>
            <value>
                <fullName>Corridors Room</fullName>
            </value>
            <value>
                <fullName>CP1 &amp; CP2 Equipment</fullName>
            </value>
            <value>
                <fullName>CP1 &amp; CP2 Room</fullName>
            </value>
            <value>
                <fullName>FT1 Equipment</fullName>
            </value>
            <value>
                <fullName>FT1 Room</fullName>
            </value>
            <value>
                <fullName>GMP Warehouse &amp; Freezer Farm Equipment</fullName>
            </value>
            <value>
                <fullName>GMP Warehouse &amp; Freezer Farm Room</fullName>
            </value>
            <value>
                <fullName>Locker Room Personnel Airlock In &amp; Out Room</fullName>
            </value>
            <value>
                <fullName>MF1 &amp; MF2 Equipment</fullName>
            </value>
            <value>
                <fullName>MF1 &amp; MF2 Room</fullName>
            </value>
            <value>
                <fullName>PR1 &amp; PR2 Equipment</fullName>
            </value>
            <value>
                <fullName>PR1 &amp; PR2 Room</fullName>
            </value>
            <value>
                <fullName>SP1 Equipment</fullName>
            </value>
            <value>
                <fullName>SP1 Room</fullName>
            </value>
            <value>
                <fullName>Waste Out and Material Out Room</fullName>
            </value>
            <value>
                <fullName>WD1 Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>