ConnexoProject/force-app/main/default/objects/Security__c/fields/Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone__c</fullName>
    <description>Cell Phone field is dependent on Schneider BAS field.</description>
    <label>Cell Phone</label>
    <type>Phone</type>
</CustomField>