ConnexoProject/force-app/main/default/objects/Security__c/fields/CustomManagerId__c.field-meta.xml
<CustomField>
    <fullName>CustomManagerId__c</fullName>
    <formula>IF( 1=1, OwnerId, Owner:User.ManagerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomManagerId</label>
    <type>Text</type>
</CustomField>