ConnexoProject/force-app/main/default/objects/Security__c/fields/Delay_Time__c.field-meta.xml
<CustomField>
    <fullName>Delay_Time__c</fullName>
    <inlineHelpText>The count is in days .</inlineHelpText>
    <label>Delay Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>