ConnexoProject/force-app/main/default/objects/Security__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>calculate the Training Due Date from Delay Time field</description>
    <formula>DATEVALUE(CreatedDate +  Delay_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>