ConnexoProject/force-app/main/default/objects/Security__c/fields/Email_Long__c.field-meta.xml
<CustomField>
    <fullName>Email_Long__c</fullName>
    <description>Use a comma to separate Emails.</description>
    <inlineHelpText>Use a comma to separate Emails.</inlineHelpText>
    <label>Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>