ConnexoProject/force-app/main/default/objects/Security__c/fields/FAM__c.field-meta.xml
<CustomField>
    <fullName>FAM__c</fullName>
    <inlineHelpText>FAM Manager&apos;s Name</inlineHelpText>
    <label>FAM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>