ConnexoProject/force-app/main/default/objects/Security__c/fields/Functional_Area_Manager__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Functional Area Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Security</relationshipName>
    <type>Lookup</type>
</CustomField>