ConnexoProject/force-app/main/default/objects/Security__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>System__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMS Viewer</fullName>
            </value>
            <value>
                <fullName>DMS Author</fullName>
            </value>
            <value>
                <fullName>DMS Reviewer</fullName>
            </value>
            <value>
                <fullName>DMS Approver</fullName>
            </value>
            <value>
                <fullName>General User</fullName>
            </value>
            <value>
                <fullName>Area Management</fullName>
            </value>
            <value>
                <fullName>Andelyn QA</fullName>
            </value>
            <value>
                <fullName>CSA Authors</fullName>
            </value>
            <value>
                <fullName>CSA Executors</fullName>
            </value>
            <value>
                <fullName>CSA Power Users</fullName>
            </value>
            <value>
                <fullName>CSA Quality Assurance</fullName>
            </value>
            <value>
                <fullName>CSA SMEs</fullName>
            </value>
            <value>
                <fullName>CSA System/Process Owners</fullName>
            </value>
            <value>
                <fullName>CSA Validation Managers</fullName>
            </value>
            <value>
                <fullName>Labchip Admin</fullName>
            </value>
            <value>
                <fullName>Labchip SuperUser</fullName>
            </value>
            <value>
                <fullName>LabchipUser</fullName>
            </value>
            <value>
                <fullName>HybridSystem Admin</fullName>
            </value>
            <value>
                <fullName>HybridSystem SuperUser</fullName>
            </value>
            <value>
                <fullName>HybridSystem User</fullName>
            </value>
            <value>
                <fullName>Admins</fullName>
            </value>
            <value>
                <fullName>SuperUsers</fullName>
            </value>
            <value>
                <fullName>Users</fullName>
            </value>
            <value>
                <fullName>Locally Administrated</fullName>
            </value>
            <value>
                <fullName>PLA_NanoDrop_Admins</fullName>
            </value>
            <value>
                <fullName>PLA_NanoDrop_SuperUsers</fullName>
            </value>
            <value>
                <fullName>PLA_NanoDrop_Users</fullName>
            </value>
            <value>
                <fullName>PLA_Fermenters_Admin</fullName>
            </value>
            <value>
                <fullName>PLA_Fermenters_Supervisor</fullName>
            </value>
            <value>
                <fullName>PLA_Fermenters_Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>