ConnexoProject/force-app/main/default/objects/Security__c/fields/Modify_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Modify_Alarm__c</fullName>
    <label>Modify Alarms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Selected Alarms</fullName>
            </value>
            <value>
                <fullName>Remove Selected Alarms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>