ConnexoProject/force-app/main/default/objects/Security__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>System__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMS - Gen</fullName>
            </value>
            <value>
                <fullName>DMS- PD</fullName>
            </value>
            <value>
                <fullName>EQMS</fullName>
            </value>
            <value>
                <fullName>Audits</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>SQM</fullName>
            </value>
            <value>
                <fullName>Compliance Wire</fullName>
            </value>
            <value>
                <fullName>SBO</fullName>
            </value>
            <value>
                <fullName>BEAS</fullName>
            </value>
            <value>
                <fullName>ADC</fullName>
            </value>
            <value>
                <fullName>ACC General</fullName>
            </value>
            <value>
                <fullName>ACC Clean Rooms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CAPA</fullName>
                <isActive>false</isActive>
                <label>CAPA</label>
            </value>
            <value>
                <fullName>Change Control</fullName>
                <isActive>false</isActive>
                <label>Change Control</label>
            </value>
            <value>
                <fullName>Quality Events</fullName>
                <isActive>false</isActive>
                <label>Quality Events</label>
            </value>
            <value>
                <fullName>Stand Alone CAPA</fullName>
                <isActive>false</isActive>
                <label>Stand Alone CAPA</label>
            </value>
            <value>
                <fullName>ValGenesis</fullName>
                <isActive>false</isActive>
                <label>ValGenesis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>