ConnexoProject/force-app/main/default/objects/Security__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>System__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMS User</fullName>
            </value>
            <value>
                <fullName>DMS Admin</fullName>
            </value>
            <value>
                <fullName>Pharma Owner</fullName>
            </value>
            <value>
                <fullName>CAPA</fullName>
            </value>
            <value>
                <fullName>Change Control</fullName>
            </value>
            <value>
                <fullName>Quality Events</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Observation</fullName>
            </value>
            <value>
                <fullName>Owner Transfer</fullName>
            </value>
            <value>
                <fullName>View Only</fullName>
            </value>
            <value>
                <fullName>Managers and Supervisors</fullName>
            </value>
            <value>
                <fullName>Primary Manager</fullName>
            </value>
            <value>
                <fullName>Learner</fullName>
            </value>
            <value>
                <fullName>Quality Assurance Reporting View</fullName>
            </value>
            <value>
                <fullName>Quality Assurance Documentation Internal</fullName>
            </value>
            <value>
                <fullName>Gowning Verifications</fullName>
            </value>
            <value>
                <fullName>IT Admin</fullName>
            </value>
            <value>
                <fullName>Organization Administrator</fullName>
            </value>
            <value>
                <fullName>Course Owner</fullName>
            </value>
            <value>
                <fullName>General User</fullName>
            </value>
            <value>
                <fullName>Alarm User</fullName>
            </value>
            <value>
                <fullName>Engineering User</fullName>
            </value>
            <value>
                <fullName>Business Administrator</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Non GxP Reviewer</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Query Administrator</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>