ConnexoProject/force-app/main/default/objects/Security__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BMRAM</fullName>
            </value>
            <value>
                <fullName>Facility Access</fullName>
            </value>
            <value>
                <fullName>Image Lab</fullName>
            </value>
            <value>
                <fullName>LabChip</fullName>
            </value>
            <value>
                <fullName>LabVantage</fullName>
            </value>
            <value>
                <fullName>Lighthouse Portable</fullName>
            </value>
            <value>
                <fullName>Ops Autoclave</fullName>
            </value>
            <value>
                <fullName>Ops Bioreactor</fullName>
            </value>
            <value>
                <fullName>Ops FlexiPro</fullName>
            </value>
            <value>
                <fullName>Ops Flowstar</fullName>
            </value>
            <value>
                <fullName>Ops MVP</fullName>
            </value>
            <value>
                <fullName>Ops Nanodrop</fullName>
            </value>
            <value>
                <fullName>OPS ViCell Blu</fullName>
            </value>
            <value>
                <fullName>PLA NanoDrops</fullName>
            </value>
            <value>
                <fullName>PLA XDR Fermenters</fullName>
            </value>
            <value>
                <fullName>QC ddPCRs</fullName>
            </value>
            <value>
                <fullName>QC HPLC</fullName>
            </value>
            <value>
                <fullName>QC Nanodrop</fullName>
            </value>
            <value>
                <fullName>QC Osmometer</fullName>
            </value>
            <value>
                <fullName>QC Plate Readers</fullName>
            </value>
            <value>
                <fullName>QC qPCRs</fullName>
            </value>
            <value>
                <fullName>QC UltraRed</fullName>
            </value>
            <value>
                <fullName>RES_Q</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Schneider BAS</fullName>
            </value>
            <value>
                <fullName>Tempo</fullName>
            </value>
            <value>
                <fullName>TetraScience</fullName>
            </value>
            <value>
                <fullName>Trackwise</fullName>
            </value>
            <value>
                <fullName>Tulip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>