ConnexoProject/force-app/main/default/objects/Security__c/fields/Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed__c</fullName>
    <label>Training Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Delayed Verification</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>