ConnexoProject/force-app/main/default/objects/Security__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <label>User ID</label>
    <type>TextArea</type>
</CustomField>