ConnexoProject/force-app/main/default/objects/Security__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>Use a comma to separate Username.</description>
    <inlineHelpText>Use a comma to separate Username.</inlineHelpText>
    <label>User Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>