ConnexoProject/force-app/main/default/objects/Security__c/validationRules/Delay_Time_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Delay_Time_is_mandatory</fullName>
    <active>true</active>
    <description>If Training Completed = Delayed Verification, Delay Time is mandatory.</description>
    <errorConditionFormula>AND(ISPICKVAL( Training_Completed__c , &quot;Delayed Verification&quot;),
ISBLANK( Delay_Time__c ))</errorConditionFormula>
    <errorDisplayField>Delay_Time__c</errorDisplayField>
    <errorMessage>If Training Completed = Delayed Verification, Delay Time is mandatory.</errorMessage>
</ValidationRule>