ConnexoProject/force-app/main/default/objects/Security__c/validationRules/Delay_time_should_be_between_1_to_90_num.validationRule-meta.xml
<ValidationRule>
    <fullName>Delay_time_should_be_between_1_to_90_num</fullName>
    <active>true</active>
    <errorConditionFormula>( Delay_Time__c &lt; 1 ||  Delay_Time__c  &gt; 90 )</errorConditionFormula>
    <errorDisplayField>Delay_Time__c</errorDisplayField>
    <errorMessage>Delay time should be between 1 and 90 days</errorMessage>
</ValidationRule>