ConnexoProject/force-app/main/default/objects/Security__c/validationRules/Delay_Time_Whole_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Delay_Time_Whole_Number</fullName>
    <active>true</active>
    <errorConditionFormula>FLOOR( Delay_Time__c ) &lt;&gt;  Delay_Time__c</errorConditionFormula>
    <errorDisplayField>Delay_Time__c</errorDisplayField>
    <errorMessage>Delay time rounded to whole number</errorMessage>
</ValidationRule>