ConnexoProject/force-app/main/default/objects/Security__c/validationRules/Email_field_in_proper_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_field_in_proper_format</fullName>
    <active>true</active>
    <description>Email field in proper formatNOT( REGEX(Custom_email_list__c , &quot;([A-Za-z0-9]+([!#$%&amp;&apos;*+-/=?^_`{|}~]*[A-Za-z0-9]+)*@[A-Za-z0-9\\-]+(\\.[A-Za-z0-9\\-]+)*[ ]*[;]?[ ]*)+&quot;</description>
    <errorConditionFormula>NOT( REGEX( Email_Long__c , &quot;([A-Za-z0-9]+([!#$%&amp;&apos;*+-/=?^_`{|}~]*[A-Za-z0-9]+)*@[A-Za-z0-9\\-]+(\\.[A-Za-z0-9\\-]+)*[ ]*[,;]?[ ]*)+&quot; ))</errorConditionFormula>
    <errorDisplayField>Email_Long__c</errorDisplayField>
    <errorMessage>Email should be in email format separated by semicolon ;</errorMessage>
</ValidationRule>