ConnexoProject/force-app/main/default/objects/Security__c/validationRules/FAM_should_be_User_manager.validationRule-meta.xml
<ValidationRule>
    <fullName>FAM_should_be_User_manager</fullName>
    <active>false</active>
    <errorConditionFormula>Owner:User.ManagerId &lt;&gt; $User.Id</errorConditionFormula>
    <errorMessage>Please select requester&apos;s manager for Functional Area Manager field</errorMessage>
</ValidationRule>