ConnexoProject/force-app/main/default/objects/Security__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Short_Description__c</columns>
    <columns>System__c</columns>
    <columns>UserName__c</columns>
    <columns>Action__c</columns>
    <columns>Functional_Area_Manager__c</columns>
    <columns>Due_Date__c</columns>
    <columns>CMPL123_WF_Status__c</columns>
    <columns>CMPL123_WF_Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>